Remove width 100% to prevent minor overflow

--- a/_scss/tutorial/list.scss
+++ b/_scss/tutorial/list.scss
@@ -1,6 +1,5 @@
 .list {
   background-color: #FFF;
-  width: 100%;
   padding: 1em;
   img {
     width: 80%;
